<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Project made by Jesús Rodríguez Malagón
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seleccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borde_oscuro"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/botonretroceso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/transparente"
                android:src="@drawable/back_claro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infotitulolibro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="serif"
                android:text="TextView"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/botonretroceso"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBarItemReciclerView"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imagenlibro"
                android:layout_width="100dp"
                android:layout_height="170dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nid"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="serif"
                android:text="@string/titulo"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/titulolibro"
                app:layout_constraintStart_toEndOf="@+id/imagenlibro"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titulolibro"
                android:layout_width="192dp"
                android:layout_height="26dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/like"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imagenlibro"
                app:layout_constraintTop_toBottomOf="@+id/titulo" />

            <TextView
                android:id="@+id/autor"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/autor"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/autorlibro"
                app:layout_constraintStart_toEndOf="@+id/imagenlibro"
                app:layout_constraintTop_toBottomOf="@+id/titulolibro" />

            <TextView
                android:id="@+id/autorlibro"
                android:layout_width="192dp"
                android:layout_height="24dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/titulolibro"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imagenlibro"
                app:layout_constraintTop_toBottomOf="@+id/autor" />

            <ToggleButton
                android:id="@+id/like"
                android:layout_width="36dp"
                android:layout_height="32dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/likeoff"
                android:padding="8dp"
                android:textOff="@string/vacio"
                android:textOn="@string/vacio"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nlikes"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/nlikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/nid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>